<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="ACC0"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="ACC1"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/dialog_Accelerometer"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/dialog_Deviation"
                    android:textColor="@color/color_not_charging" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="9dp" />

                    <com.example.administrator.testz.ZProgressBar
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:max="100"
                        app:zpb_backgroundColor="@color/color_book"
                        app:zpb_duration="300"
                        app:zpb_progressColor="@color/colorAccent"
                        app:zpb_radius="16dp" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="25dp" />

                    <com.example.administrator.testz.ZProgressBar
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:max="100"
                        app:zpb_backgroundColor="@color/color_book"
                        app:zpb_duration="300"
                        app:zpb_progressColor="@color/colorAccent"
                        app:zpb_radius="16dp" />
                </LinearLayout>


            </LinearLayout>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="GYRO0"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="GYRO1"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/dialog_Gyroscope"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/dialog_Deviation"
                    android:textColor="@color/color_not_charging" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="9dp" />

                    <com.example.administrator.testz.ZProgressBar
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:max="100"
                        app:zpb_backgroundColor="@color/color_book"
                        app:zpb_duration="300"
                        app:zpb_progressColor="@color/colorAccent"
                        app:zpb_radius="16dp" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="25dp" />

                    <com.example.administrator.testz.ZProgressBar
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:max="100"
                        app:zpb_backgroundColor="@color/color_book"
                        app:zpb_duration="300"
                        app:zpb_progressColor="@color/colorAccent"
                        app:zpb_radius="16dp" />
                </LinearLayout>


            </LinearLayout>
        </RelativeLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <LinearLayout
            android:id="@+id/start_imu"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_Calibration_imu"
                android:textColor="@color/blue"
                android:textSize="18sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:background="@drawable/circle_dialog" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="@string/dialog_use_current"
                android:textColor="@color/white" />

            <com.example.administrator.testz.ZProgressBar
                android:layout_width="20dp"
                android:layout_height="10dp"
                android:layout_marginLeft="5dp"
                android:max="100"
                app:zpb_backgroundColor="@color/color_book"
                app:zpb_duration="300"
                app:zpb_progressColor="@color/colorAccent"
                app:zpb_radius="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="优"
                android:textColor="@color/white" />

            <com.example.administrator.testz.ZProgressBar
                android:layout_width="20dp"
                android:layout_height="10dp"
                android:layout_marginLeft="5dp"
                android:max="100"
                app:zpb_backgroundColor="@color/yellow"
                app:zpb_duration="300"
                app:zpb_progressColor="@color/colorAccent"
                app:zpb_radius="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="良"
                android:textColor="@color/white" />

            <com.example.administrator.testz.ZProgressBar
                android:layout_width="20dp"
                android:layout_height="10dp"
                android:layout_marginLeft="5dp"
                android:max="100"
                app:zpb_backgroundColor="@color/red"
                app:zpb_duration="300"
                app:zpb_progressColor="@color/colorAccent"
                app:zpb_radius="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="差"
                android:textColor="@color/white" />


        </LinearLayout>
    </RelativeLayout>
</LinearLayout>